--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -17,6 +16,9 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.0'
+
+    - name: Clear Composer Cache
+      run: composer clear-cache
 
     - name: Get Composer Cache Directory
       id: composer-cache
