--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,7 +15,7 @@ jobs:
 
     - uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.2.12'
+        php-version: '8.2'
 
     - name: Clear Composer Cache
       run: composer clear-cache
@@ -35,7 +35,7 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --verbose
 
     - name: Generate key
       run: php artisan key:generate
