--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=https://databases-auth.000webhost.com/index.php
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=id22303855_abc
 DB_USERNAME=id22303855_root
