--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Run Migrations
       env:
         DB_CONNECTION: mysql
-        DB_HOST: mysql22303855.000webhost.com
+        DB_HOST: 99.000webhost.io
         DB_PORT: 3306
         DB_DATABASE: id22303855_abc
         DB_USERNAME: id22303855_root
@@ -62,7 +62,7 @@ jobs:
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
-        DB_HOST: mysql22303855.000webhost.com
+        DB_HOST: 99.000webhost.io
         DB_PORT: 3306
         DB_DATABASE: id22303855_abc
         DB_USERNAME: id22303855_root
