--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=99.000webhost.io
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=id22303855_abc
-DB_USERNAME=id22303855_root
-DB_PASSWORD=cafe123CAFE@
+DB_DATABASE=abc
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
