--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -52,19 +52,19 @@ jobs:
     - name: Run Migrations
       env:
         DB_CONNECTION: mysql
-        DB_HOST: 99.000webhost.io
+        DB_HOST: 127.0.0.1
         DB_PORT: 3306
-        DB_DATABASE: id22303855_abc
-        DB_USERNAME: id22303855_root
-        DB_PASSWORD: cafe123CAFE@
+        DB_DATABASE: abc
+        DB_USERNAME: root
+        DB_PASSWORD: ""
       run: php artisan migrate --force
 
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
-        DB_HOST: 99.000webhost.io
+        DB_HOST: 127.0.0.1
         DB_PORT: 3306
-        DB_DATABASE: id22303855_abc
-        DB_USERNAME: id22303855_root
-        DB_PASSWORD: cafe123CAFE@
+        DB_DATABASE: abc
+        DB_USERNAME: root
+        DB_PASSWORD: ""
       run: php artisan test
